--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,8 +2,8 @@ body {
   font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
   font-size: 18px;
   line-height: 34px;
-  color: #777777;
-  background: url("../images/concrete_seamless.png");
+  background-color:#f0f0f0
+  
 }
 
 * {
@@ -12,13 +12,21 @@ body {
 
 /* general */
 
-.container {
-  width: 100%;
-  max-width: 960px;
-  margin: 0 auto;
-  clear: both;
+#image-card{
+  float:left;
+  margin: 5px 0 0 0;
 }
 
+.container {
+  width: 100%;
+  margin: 0 auto;
+  /* clear: both; */
+}
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
+}
 h1,
 h2,
 h3,
@@ -34,15 +42,15 @@ h1,
 h2,
 h3 {
   font-family: Georgia, Times, "Times New Roman", serif;
-  font-weight: 700;
+  font-weight: 350;
   color: #4aaaa5;
 }
 
 h1 {
-  padding-bottom: 20px;
+  padding-bottom: 0px;
   font-size: 30px;
   line-height: 49px;
-  border-bottom: 3px solid #dddddd;
+  
 }
 
 h2,
@@ -53,11 +61,12 @@ h3 {
 /* header */
 
 #masthead {
-  position: fixed;
+  /* position: fixed; */
+  float:right;
   z-index: 99;
-  width: 100%;
-  margin: 0 0 30px;
-  overflow: auto;
+  width: 73%;
+  margin: 5px 0 30px ; 
+  /* overflow: auto; */
   color: #ffffff;
   background: #ffffff;
   border-bottom: 2px solid #cccccc;
@@ -77,8 +86,12 @@ h3 {
   background: #4aaaa5;
 }
 
+.navbar{
+  padding: 25px !important;
+}
+
 nav {
-  float: right;
+  width: 100%;
   margin-top: 25px;
 }
 
@@ -108,6 +121,9 @@ footer {
   background: #666666;
   border-top: 8px solid #4aaaa5;
   height: 50px;
+  width:73%;
+  max-width: 960px;
+  float:right;
 }
 
 h3, h2 {
@@ -120,18 +136,19 @@ h3, h2 {
 /* main */
 
 #main-container {
-  padding-top: 130px;
+  padding-top: 30px;
   min-height: calc(100vh - 70px);
 }
 
 .main-section {
-  float: left;
-  width: 100%;
+  width: 73%;
   max-width: 960px;
+  min-height:860px;
   padding: 30px;
-  margin: 0 0 40px;
+  margin: 0 0 30px;
   background: #ffffff;
   border: 1px solid #dddddd;
+  float: right;
 }
 
 /* portfolio page */
@@ -214,4 +231,8 @@ input[type=submit] {
   cursor: pointer;
   background: #4aaaa5;
   border: 0 none;
+}
+
+.card-title{
+  margin-bottom: 0px !important;
 }
